Fix overflow not visible

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -19,7 +19,6 @@ $fa-font-path: "assets/fonts";
 @import "../../../node_modules/font-awesome/scss/screen-reader";
 
 html {
-  overflow: hidden;
   height: 100%;
 }
 
@@ -31,7 +30,6 @@ body {
   font-weight: 300;
   line-height: 1.6;
   height: 100%;
-  overflow: auto;
 }
 
 h1, h2 {
